--- a/css2/style2.css
+++ b/css2/style2.css
@@ -3,6 +3,7 @@
 }
 
 body{
+	text-align: center;
 	background: repeating-linear-gradient(
     -45deg,
     #151515,
@@ -14,37 +15,42 @@ body{
 }
 span{
 	display: block;
-	font-size: 25px;
+	font-size: 3vw;
 	font-family: arial;
 	margin-top: 12px;
 	text-align: center;
 }
 
 table{
-	margin: 10px auto;
+	display: inline;
+	width: 100%;
+	margin: 1% auto;
 	border: 0;
 	border-spacing: 0; 
 }
 
 div{
-	width: 54%;
+	display: inline-block;
+	text-align: center;
 	color: #b0b0b0;
 	background-color: #3c3c3c;
 	border: 0px;
-	border-radius: 30px;
+	border-radius: 3vw;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 td{
+ 
     padding: 0 ;
 }
 
 table img{
-	margin:6px;
+	margin:2% 2%; 
 	display: block;
-	height: 165px;
-	width: 220px;
-	border-radius: 30px;
+	height: 100%;
+	width: 16vw;
+
+	border-radius: 3vw;
 }
 
