--- a/JS1/test.css
+++ b/JS1/test.css
@@ -1,6 +1,14 @@
 body{
-font-family: cursive;
-background-color: #aacc90;
+	font-family: cursive;
+	text-align: center;
+	background: repeating-linear-gradient(
+    -45deg,
+    #4488DD,
+    #44DD88 45px,
+    #333333 45px,
+    #333333 50px
+    );
+    background-attachment: fixed;
 }
 
 .main{
@@ -21,8 +29,12 @@ background-color: #aacc90;
 .heading{
 	text-align: center;
 	margin: 0px auto;
-	width : 150px;
-}
+	width : 200px;
+	font-size: 28px;'
+    font-style: italic;
+    font-weight: bold;
+    font-family: "Lucida Console";
+    }
 
 .close_button{
 	text-align: center;
@@ -31,6 +43,7 @@ background-color: #aacc90;
 	width : 25px;
 	height: 24px;
     border-radius: 5px;
+    border: 1px solid black;
 	background-color: #dd2e29;
 	display: block;
 	float: right;
